# GridEye-2.0

./: README.md
Central/: ReadMe.md
Central/kibana/plugins/: ReadMe.md
Central/kibana/plugins/grid-eye-theme/: README.md  kibana.json  package.json
Central/services/: .env  README.md  index.ts  package-lock.json  package.json
Central/services/config/: esclient.ts
Central/services/gecd/: gecd  gecd.settings
Central/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Central/ui-experiments/: README.md
Central/ui/src/: App.test.tsx  App.tsx  app.module.css  index.css  main.tsx
Central/ui/src/assets/: grid-eye-logo-clipped.tsx  grid-eye-logo-full.tsx
Central/ui/src/config/: reactQuery.ts
Edge/services/protocol_probes/: dpi_controller.py  settings.json
Edge/suricata/: ReadMe.md
Edge/suricata/Docs/: Suricata-Parameter-Tuning.md  test.md
Edge/suricata/config/: suricata-app-config.yaml  suricata-capture-method.yaml  suricata-capture.yaml  suricata-detection.yaml  suricata-flow-tracking.yaml  suricata-network.yaml  suricata-output.yaml  suricata-perf.yaml  suricata-rule-management.yaml  suricata-run-options.yaml  suricata.yaml  suricata.yaml_allinone  threshold.config
Edge/suricata/pcaps/: modbus.pcap
Edge/suricata/rules/: thresh.rules
Edge/suricata/scripts/: config_automate.py  suricata.yaml  suricata_conf.json
grideye-central/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
grideye-central/grideye/: __init__.py  __main__.py  settings.py
grideye-central/grideye/db/models/: __init__.py  nvd.py
grideye-central/grideye/services/: __init__.py
grideye-central/grideye/services/elasticsearch/: service.py
grideye-central/grideye/services/nvd/: service.py
grideye-central/grideye/services/topology/: service.py
grideye-central/grideye/tests/: __init__.py
grideye-central/grideye/web/: __init__.py  application.py  lifetime.py
grideye-central/grideye/web/api/: __init__.py  router.py
grideye-central/grideye/web/api/echo/: __init__.py  views.py
grideye-central/grideye/web/api/monitoring/: __init__.py
grideye-central/grideye/web/api/nvd/: __init__.py  views.py
grideye-central/grideye/web/api/topology/: __init__.py  views.py
(+211 files in other folders)
